--- a/css/wing.css
+++ b/css/wing.css
@@ -39,7 +39,8 @@ body {
   letter-spacing: 0.01em;
   line-height: 1.6;
   font-size: 1.5em;
-  font-weight: 400;
+  font-weight: 300;
+  color: #faf5e6;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
@@ -55,16 +56,18 @@ h5,
 h6 {
   margin-bottom: 2rem;
   font-weight: 300;
-  font-family: "Quicksand";
+  font-family: "Open Sans";
 }
 
 h1, h2, h3 {
   letter-spacing: -.1rem;
+
 }
 
 h1 {
-  font-size: 4.0rem;
+  font-size: 3.8rem;
   line-height: 1.2;
+  font-weight: 800;
 }
 
 h2 {
