--- a/css/wing1.css
+++ b/css/wing1.css
@@ -10,7 +10,7 @@
   Base Style
 ------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Overpass+Mono');
-@import url('https://fonts.googleapis.com/css?family=');
+@import url('https://fonts.googleapis.com/css?family=Rammetto+One');
 
 html {
   box-sizing: border-box;
@@ -48,17 +48,18 @@ h1, h2, h3 {
 h1 {
   font-size: 4.0rem;
   line-height: 1.2;
-
+  font-weight: 600;
 }
 
 h2 {
-  font-size: 3.6rem;
-  line-height: 1.25;  font-family: "", sans-serif; font-weight: 400;
+  font-size: 3.8rem;
+  line-height: 1.22;  font-family: "Rammetto One", cursuive; font-weight: 400; text-transform: uppercase;
 }
 
 h3 {
   font-size: 3.0rem;
   line-height: 1.3;
+  color: #c5796d;
 }
 
 h4 {
@@ -100,6 +101,11 @@ h6 {
   }
 }
 
+.soon{
+  font-size: 2.5rem;
+  line-height: 1.22;  font-family: "Overspace Mono", monospace ; font-weight: 800; text-transform: uppercase;
+
+}
 /*------------------------------------------------------------
   Links
 ------------------------------------------------------------*/
