--- a/css/2017.css
+++ b/css/2017.css
@@ -7,9 +7,8 @@ background: #212321;
 
 header{ /* Subtle  */
 color: #232123;
- background: linear-gradient(180deg, #5D4157 0%, #A8CABA 100%);
+ background: linear-gradient(180deg, #DBE6F6 0%, #C5796D 100%);
 
-  animation: huerotator 4s   normal ease;
   }
 
   @keyframes huerotator {
