Add footer and new gradient

--- a/css/defy.css
+++ b/css/defy.css
@@ -4,13 +4,9 @@ background: #232123;
 color: #fff;
 }
 header{ /* Subtle  */
-
-
- background: linear-gradient(90deg, #DBE6F6 0%, #C5796D 100%);
-  animation: huerotator 3s   alternate ease-in-out;
-  }
-
-  @keyframes huerotator {
+ background: linear-gradient(90deg, #DBE6F6 0%, #BF755D 100%);
+  animation: huerotator 4s   alternate-reverse ease-in;
+    @keyframes huerotator {
     0% {
       -webkit-filter: hue-rotate(0deg);
       filter: hue-rotate(0deg);
@@ -19,10 +15,30 @@ header{ /* Subtle  */
     100% {
       -webkit-filter: hue-rotate(360deg);
       filter: hue-rotate(360deg);
+      .title{
+         text-transform: uppercase;
+      }
 
     }
   }
+}
 
 section{
-color: #fff;
+}
+
+footer {
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  right: 0;
+  text-align: center;
+  z-index: 9999999;
+}
+
+footer >a {
+color: #FFF;
+}
+
+footer > a:hover {
+  color: #BF755D;
 }
