--- a/css/defy.css
+++ b/css/defy.css
@@ -1,42 +1,42 @@
 
 body {
-background: #232123;
-color: #fff;
-} 
+	background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB;
+	background-size: 22px 22px;
+ color: #fff;
+ min-height:100%;
+position:relative;
+}
 header{ /* Subtle  */
-   background: linear-gradient(45deg, #BF755D 0%, #DBE6F6 100%);
+   position: center;
+   background: linear-gradient(180deg, #30cfd0   0%, #330867 100%);
    animation: huerotator 3s   alternate ease-in-out;
    }
- 
+
    @keyframes huerotator {
      0% {
        -webkit-filter: hue-rotate(0deg);
        filter: hue-rotate(0deg);
      }
- 
+
      100% {
        -webkit-filter: hue-rotate(360deg);
        filter: hue-rotate(360deg);
- 
+
      }
    }
-
 section{
 }
-
 footer {
-  position: absolute;
-  bottom: 20px;
-  left: 0;
-  right: 0;
-  text-align: center;
-  z-index: 9999999;
+position: absolute;
+bottom: 50;
+right: 0;
+left: 0;
+height: 10px;
+text-align: center;
 }
-
 footer >a {
 color: #FFF;
 }
-
 footer > a:hover {
   color: #e5e5e5;
 }
