--- a/css/defy.css
+++ b/css/defy.css
@@ -15,6 +15,7 @@ h1 {
  line-height: 2px;
  text-transform: uppercase;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
+ bottom: 42px;
 }
 h2 {
   margin: 0.5em 0 0.2em 0;
