--- a/css/defy.css
+++ b/css/defy.css
@@ -11,22 +11,19 @@ h1 {
  color: #330867;
  font-weight:normal;
  font-family: 'Hind', sans-serif;
- font-size: 48px;
- line-height: 2px;
- text-transform: uppercase;
+ font-size: 58px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
  bottom: 42px;
 }
 h2 {
-  margin: 0.5em 0 0.2em 0;
-  	color: #30cfd0;
+  	color: #fff;
   	font-weight: normal;
-  	font-size: 18px;
-  	line-height: 25px;
-  	}
+  	font-size: 28px;
+  	line-height: 40px;
+		  	}
 header{ /* Subtle  background: linear-gradient(180deg, #30cfd0   0%, #330867 100%); background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB; */
-   background: linear-gradient(180deg, #3b41c5   0%, #a981bb  100%);
-   animation: huerotator 3s   alternate ease-in-out;
+    background: linear-gradient(180deg, #330867 0%, #30cfd0  100%);
+   animation: huerotator 2s   alternate ease-in;
    }
 
    @keyframes huerotator {
@@ -45,7 +42,7 @@ section{
 }
 footer {
 position: absolute;
-bottom: 42px;
+bottom:50;
 right: 0;
 left: 0;
 height: 10px;
