--- a/css/defy.css
+++ b/css/defy.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 @import url('https://rsms.me/inter/inter-ui.css');
 
 body {
@@ -11,20 +11,22 @@ body {
 h1 {
  margin: 1em 0 0.5em 0;
  color: #330867;
- font-weight:bold;
- font-family:  'Inter UI', sans-serif;
- font-size: 58px;
+ font-weight:300;
+ font-family:   'Lato', sans-serif;
+ font-size: 72px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
+ line-height: 70px;
  bottom: 42px;
+
 }
 h2 {
   	color: #fff;
-		font-family:  'Inter UI', sans-serif;
-  	font-weight: normal;
-  	font-size: 28px;
+		font-family:'Inter UI', sans-serif;
+  	font-weight: 300;
+  	font-size: 22px;
   	line-height: 40px;
 		  	}
-header{ /* Subtle  background: linear-gradient(180deg, #30cfd0   0%, #330867 100%); background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB; */
+/* header{ /* Subtle  background: linear-gradient(180deg, #30cfd0   0%, #330867 100%); background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB; */
     background: linear-gradient(180deg, #330867 0%, #30cfd0  100%);
    animation: huerotator 2s   alternate ease-in;
    }
