--- a/css/defy.css
+++ b/css/defy.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Chivo ');
+@import url('https://fonts.googleapis.com/css?family=Arvo');
 @import url('https://rsms.me/inter/inter-ui.css');
 
 body {
@@ -12,7 +12,7 @@ h1 {
  margin: 1em 0 0.5em 0;
  color: #330867;
  font-weight:600;
- font-family:'Chivo', sans-serif;
+ font-family:'Arvo', slab-serif;
  font-size: 74px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
  line-height: 70px;
@@ -20,7 +20,7 @@ h1 {
 }
 h2 {
   	color: #fff;
-		font-family:'Iter UI', sans-serif;
+		font-family:'Inter UI', sans-serif;
   	font-weight: 300;
   	font-size: 22px;
   	line-height: 40px;
@@ -34,7 +34,7 @@ h2 {
 	  text-align: justify;
 
 }
-.em{
+.text{
 	font-size: 12px;
 }
 /* header{ /* Subtle  background: linear-gradient(180deg, #30cfd0   0%, #330867 100%); background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB; */
