--- a/css/defy.css
+++ b/css/defy.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css?family=Arvo');
+@import url('https://fonts.googleapis.com/css?family=Hind');
 @import url('https://rsms.me/inter/inter-ui.css');
 
 body {
@@ -11,8 +11,8 @@ body {
 h1 {
  margin: 1em 0 0.5em 0;
  color: #330867;
- font-weight:600;
- font-family:'Arvo', slab-serif;
+ font-weight:800;
+ font-family:'Hind', sans-serif;
  font-size: 74px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
  line-height: 70px;
@@ -22,20 +22,24 @@ h2 {
   	color: #fff;
 		font-family:'Inter UI', sans-serif;
   	font-weight: 300;
-  	font-size: 22px;
+  	font-size: 28px;
   	line-height: 40px;
 		  	}
 .text{
 	font-size: 1.5em;
-	  border: 1px solid #7577FA;
+	  border: 1px solid #9192FB;
 	  padding:5px;
 	  width: 95%;
 	  margin: 5px auto;
 	  text-align: justify;
 
 }
-.text{
-	font-size: 12px;
+.note{
+	font-size: 14px;
+	padding:5px;
+	width: 95%;
+	margin: 5px auto;
+
 }
 /* header{ /* Subtle  background: linear-gradient(180deg, #30cfd0   0%, #330867 100%); background: linear-gradient(90deg, #7577FA 20px, transparent 1%) center, linear-gradient(#7577FA 20px, transparent 1%) center, #9192FB; */
     background: linear-gradient(180deg, #330867 0%, #30cfd0  100%);
@@ -55,6 +59,7 @@ h2 {
      }
    }
 section{
+
 }
 footer {
 position: absolute;
@@ -63,7 +68,7 @@ right: 0;
 left: 0;
 height: 10px;
 text-align: center;
-font-size: 15px;
+font-size: 13.5px;
 
 }
 footer >a {
