Add DEFY banner
Defy design.

--- a/css/defy.css
+++ b/css/defy.css
@@ -1,4 +1,12 @@
 /*
+
+██████╗ ███████╗███████╗██╗   ██╗
+██╔══██╗██╔════╝██╔════╝╚██╗ ██╔╝
+██║  ██║█████╗  █████╗   ╚████╔╝
+██║  ██║██╔══╝  ██╔══╝    ╚██╔╝
+██████╔╝███████╗██║        ██║
+╚═════╝ ╚══════╝╚═╝        ╚═╝ .css
+
  "Breathe in the fresh air,
 Put your mind at ease.
 Let down your hair,
