--- a/css/defy.css
+++ b/css/defy.css
@@ -14,9 +14,11 @@ _________/\\\________________________/\\\\\_______________
     "Breathe in the fresh air,
     Put your mind at ease.
     Let down your hair,
-	 Let it flow in the breeze."
+	 Let it flow in the breeze."  
+	                          = Unknown
 	  
-       
+	   प्रसन्नता सद्भाव की छाया है; वो सद्भाव का पीछा करती है. प्रसन्न रहने का कोई और तरीका नहीं है. 
+	                                                                            - ओशो
 
 */
 
