--- a/css/defy.css
+++ b/css/defy.css
@@ -1,28 +1,28 @@
 /*
 
-_________/\\\________________________/\\\\\_______________        
- ________\/\\\______________________/\\\///________________       
-  ________\/\\\_____________________/\\\_________/\\\__/\\\_      
-   ________\/\\\______/\\\\\\\\___/\\\\\\\\\_____\//\\\/\\\__     
-    ___/\\\\\\\\\____/\\\/////\\\_\////\\\//_______\//\\\\\___    
-     __/\\\////\\\___/\\\\\\\\\\\_____\/\\\__________\//\\\____   
-      _\/\\\__\/\\\__\//\\///////______\/\\\_______/\\_/\\\_____  
-       _\//\\\\\\\/\\__\//\\\\\\\\\\____\/\\\______\//\\\\/______ 
+_________/\\\________________________/\\\\\_______________
+ ________\/\\\______________________/\\\///________________
+  ________\/\\\_____________________/\\\_________/\\\__/\\\_
+   ________\/\\\______/\\\\\\\\___/\\\\\\\\\_____\//\\\/\\\__
+    ___/\\\\\\\\\____/\\\/////\\\_\////\\\//_______\//\\\\\___
+     __/\\\////\\\___/\\\\\\\\\\\_____\/\\\__________\//\\\____
+      _\/\\\__\/\\\__\//\\///////______\/\\\_______/\\_/\\\_____
+       _\//\\\\\\\/\\__\//\\\\\\\\\\____\/\\\______\//\\\\/______
         __\///////\//____\//////////_____\///________\////________.css
 
-         
+
     "Breathe in the fresh air,
     Put your mind at ease.
     Let down your hair,
-	 Let it flow in the breeze."  
+	 Let it flow in the breeze."
 	                          = Unknown
-	  
-	   प्रसन्नता सद्भाव की छाया है; वो सद्भाव का पीछा करती है. प्रसन्न रहने का कोई और तरीका नहीं है. 
+
+	   प्रसन्नता सद्भाव की छाया है; वो सद्भाव का पीछा करती है. प्रसन्न रहने का कोई और तरीका नहीं है.
 	                                                                            - ओशो
 
 */
 
-@import url('https://fonts.googleapis.com/css?family=Hind');
+@import url('https://fonts.googleapis.com/css?family=Hind+Madurai');
 @import url('https://rsms.me/inter/inter-ui.css'); /* Apply it to forked wing.css  */
 
 body {
@@ -34,7 +34,7 @@ h1 {
  margin: 1em 0 0.5em 0;
  color: #330867;
  font-weight:800;
- font-family:'Hind', sans-serif;
+ font-family:'Hind Madurai', sans-serif;
  font-size: 74px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
  line-height: 70px;
@@ -49,11 +49,11 @@ h2 {
 		  	}
 .text{
 	font-size: 1.5em;
-	font-family:'Inter UI', sans-serif;
-	  border: 1px solid #9192FB;
-	  padding:5px;
-	  width: 95%;
-	  margin: 5px auto;
+  	padding:15px;
+font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+	  border: 2px solid #9192FB;
+	  width: 90%;
+	  margin: 10px auto;
 	  text-align: justify;
 
 }
@@ -61,7 +61,7 @@ h2 {
 	font-family:'Inter UI', sans-serif;
 	font-size: 13px;
 	padding:5px;
-	width: 95%;
+	width: 45%;
 	margin: 5px auto;
 
 }
@@ -111,4 +111,3 @@ footer > a:hover {
 	footer > a:visited {
 	 text-decoration:#FFF;
 }
-
