--- a/css/defy.css
+++ b/css/defy.css
@@ -22,7 +22,7 @@ _________/\\\________________________/\\\\\_______________
 
 */
 
-@import url('https://fonts.googleapis.com/css?family=Hind+Madurai');
+@import url('https://fonts.googleapis.com/css?family=Orbitron');
 @import url('https://rsms.me/inter/inter-ui.css'); /* Apply it to forked wing.css  */
 
 body {
@@ -33,8 +33,8 @@ background-size: 22px 22px;
 h1 {
  margin: 1em 0 0.5em 0;
  color: #330867;
- font-weight:800;
- font-family:'Hind Madurai', sans-serif;
+ font-weight:500;
+ font-family:'Orbitron', sans-serif;
  font-size: 74px;
  text-shadow: 0 2px #30cfd0, 0 3px #9192FB;
  line-height: 70px;
