Add background for text
Adds background color.

--- a/css/defy.css
+++ b/css/defy.css
@@ -54,6 +54,7 @@ font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI
 	  width: 90%;
 	  margin: 10px auto;
 	  text-align: justify;
+    background-color:#7577FA;
 
 }
 .note{
