--- a/css/defy.css
+++ b/css/defy.css
@@ -36,7 +36,7 @@ h1 {
  font-family:'Baumans', sans-serif;
  font-size: 72px;
  text-shadow: 0 2px #e7e9c, 0 3px #a3a5a8;
- line-height: 70px;
+line-height: 116px;
  bottom: 42px;
 }
 h2 {
@@ -44,27 +44,28 @@ h2 {
 		font-family:'Inter UI', sans-serif;
   	font-weight: 300;
   	font-size: 28px;
-  	line-height: 40px;
+  	  line-height: 1.313;
 		  	}
 .text{
-	font-size: 1.3em;
+	font-size: 1.2em;
   	padding:15px;
   font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	  border: 2px solid #7b8e96; //155695
-	  width: 90%;
+	  border: 2px solid #155695; // 7b8e96
+	  width: 587px;
 	  margin: 10px auto;
 	  text-align: justify;
     background-color:#2B2D32;
-    line-height: 1.313;
-  color: #e7e9ec;
+    line-height: 30px;
+    color: #e7e9ec;
 }
 .note{
 	font-family:'Inter UI', sans-serif;
 	font-size: 13px;
 	padding:5px;
-	width: 45%;
+	width: 50%;
 	margin: 5px auto;
   color: #e7e9ec;
+  line-height: 21px;
 
 }
 unart{
