--- a/css/defy.css
+++ b/css/defy.css
@@ -44,13 +44,13 @@ h2 {
 		font-family:'Inter UI', sans-serif;
   	font-weight: 300;
   	font-size: 28px;
-  	  line-height: 1.313;
-		  	}
+line-height: 1.313;
+	}
 .text{
 	font-size: 1.2em;
   	padding:15px;
-  font-family: -apple-system, BlinkMacSystemFont, Avenir, "Avenir Next", "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-	  border: 2px solid #155695; // 7b8e96
+  font-family:'Inter UI', sans-serif;
+	/*   border: 2px solid #155695; *// 7b8e96
 	  width: 587px;
 	  margin: 10px auto;
 	  text-align: justify;
@@ -58,6 +58,41 @@ h2 {
     line-height: 30px;
     color: #e7e9ec;
 }
+.gradient-border {
+  --borderWidth: 3px;
+  background: # ;
+  position: relative;
+  border-radius: var(--borderWidth);
+}
+.gradient-border:after {
+  content: '';
+  position: absolute;
+  top: calc(-3 * var(--borderWidth));
+  left: calc(-3 * var(--borderWidth));
+  height: calc(100% + var(--borderWidth) * 2);
+  width: calc(100% + var(--borderWidth) * 2);
+  background: linear-gradient(60deg, #f79533, #f37055, #ef4e7b, #a166ab, #5073b8, #1098ad, #07b39b, #6fba82);
+  border-radius: calc(2 * var(--borderWidth));
+  z-index: -1;
+  animation: animatedgradient 3s ease alternate infinite;
+  background-size: 300% 300%;
+}
+
+
+@keyframes animatedgradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+
+
 .note{
 	font-family:'Inter UI', sans-serif;
 	font-size: 13px;
